feat: changed fonts, add styles to new sections

--- a/week-2/day3/index.html
+++ b/week-2/day3/index.html
@@ -84,15 +84,48 @@
   </header>
   <main>
     <section class="banner">
-      <h1>ACCELERATING ADC INNOVATION</h1>
-      <img src="./images/Home-FINAL-01-1920x948.jpeg" alt=""/>
-
+      <img class="banner__image" src="./images/Home-FINAL-01-1920x948.jpeg" alt=""/>
+      <div class="banner__info">
+        <h1 class="banner__title">ACCELERATING ADC INNOVATION</h1>
+        <p class="banner__subtitle">... because patients are waiting</p>
+      </div>
+      <div class="banner__slogan-wrapper">
+        <p class="banner__slogan">Mersana’s mission is to discover and develop life-changing antibody-drug conjugates for patients fighting cancer.</p>
+      </div>
     </section>
     <section class="about">
-
+      <div class="about__info">
+        <h2 class="section__title"><a class="section__link" href="#">Technology</a></h2>
+        <p class="section__description">Mersana has developed highly differentiated and innovative antibody-drug conjugate (ADC) platforms, with both cytotoxic and immunostimulatory payloads, that allow for customization and optimization of ADCs for a given target and indication.  As a result, we are designing ADCs to overcome the limitations of first-generation platforms by delivering therapeutics with greater efficacy and tolerability to address the unmet medical needs of people living with cancer. </p>
+      </div>
+      <div class="about__info">
+        <h2 class="about__title"><a class="section__link" href="#">Pipeline</a></h2>
+        <p class="section__description">We are leveraging our proprietary technology platforms to build a robust pipeline of ADCs with the potential to meaningfully improve the lives of people living with cancer. We are pursuing a multiprong strategy for treating cancer with both cytotoxic and immunostimulatory ADCs.</p>
+      </div>
     </section>
     <section class="media">
-
+      <div class="media__info">
+        <h2 class="section__title"><a class="section__link" href="#">News</a></h2>
+        <div class="media__news-item">
+          <h3 class="media__date">December 2, 2021</h3>
+          <p class="section__description">Mersana Therapeutics Named to 2021 List of Top Places to Work in Massachusetts by The Boston Globe</p>
+        </div>
+        <div class="media__news-item">
+          <h3 class="media__date">November 23, 2021</h3>
+          <p class="section__description">Mersana Therapeutics to Participate in the Upcoming 4th Annual Evercore ISI HealthCONx Conference</p>
+        </div>
+      </div>
+      <div class="media__info">
+        <h2 class="section__title"><a class="section__link" href="#">Events & Presentations</a></h2>
+        <div class="media__news-item">
+          <h3 class="media__date">December 1, 2021</h3>
+          <p class="section__description">4th Annual Evercore ISI HealthCONx Conference</p>
+        </div>
+        <div class="media__news-item">
+          <h3 class="media__date">November 17, 2021</h3>
+          <p class="section__description">Stifel 2021 Virtual Healthcare Conference</p>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
