feat: cloning finished

--- a/week-2/day3/index.html
+++ b/week-2/day3/index.html
@@ -7,61 +7,60 @@
   <meta name="description" content="Website clone task by CN. Website to clone - Mersana">
   <meta name="keywords" content="Training, coding, clone, pharmacy, technology">
   <meta name="author" content="Iryna Abah">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./index.css">
   <title>Clone website task from CN</title>
 </head>
 <body class="root">
   <header class="header">
-    <div class="header__main">
-
-    </div>
     <a href="#"><img class="header__logo" src="./images/mersana-logo-500.png" alt="Mersana logo"/></a>
     <nav class="header__menu">
       <ul class="header__navigation nav-list">
-        <li><a class="header__menu-item" href="#">About</a>
+        <li><a class="menu__item header__menu-item" href="#">About</a><i class="fa fa-caret-down"></i>
           <ul class="nav-list dropdown">
-            <li><a class="dropdown__menu-item" href="#">Mission & Vision</a></li>
-            <li><a class="dropdown__menu-item" href="#">Executive Team</a></li>
-            <li><a class="dropdown__menu-item" href="#">Board of Directors</a></li>
-            <li><a class="dropdown__menu-item" href="#">Scientific Advisory Board</a></li>
-            <li><a class="dropdown__menu-item" href="#">Partnering</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Mission & Vision</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Executive Team</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Board of Directors</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Scientific Advisory Board</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Partnering</a></li>
           </ul>
         </li>
-        <li><a class="header__menu-item" href="#">Pipeline</a>
+        <li><a class="menu__item header__menu-item" href="#">Pipeline</a><i class="fa fa-caret-down"></i>
           <ul class="nav-list dropdown">
-            <li><a class="dropdown__menu-item" href="#">Overview</a></li>
-            <li><a class="dropdown__menu-item" href="#">Upifitamab Rilsodotin</a></li>
-            <li><a class="dropdown__menu-item" href="#">XMT-1592</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Overview</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Upifitamab Rilsodotin</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">XMT-1592</a></li>
           </ul>
         </li>
-        <li><a class="header__menu-item" href="#">Technology platforms</a>
+        <li><a class="menu__item header__menu-item" href="#">Technology platforms</a><i class="fa fa-caret-down"></i>
           <ul class="nav-list dropdown">
-            <li><a class="dropdown__menu-item" href="#">About ADCs</a></li>
-            <li><a class="dropdown__menu-item" href="#">DolaLock Technology</a></li>
-            <li><a class="dropdown__menu-item" href="#">Dolaflexin</a></li>
-            <li><a class="dropdown__menu-item" href="#">Dolasynthen</a></li>
-            <li><a class="dropdown__menu-item" href="#">Immunosynthen</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">About ADCs</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">DolaLock Technology</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Dolaflexin</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Dolasynthen</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Immunosynthen</a></li>
           </ul>
         </li>
-        <li><a class="header__menu-item" href="#">Publications</a></li>
-        <li><a class="header__menu-item" href="#">Investors & Media</a>
+        <li><a class="menu__item header__menu-item" href="#">Publications</a></li>
+        <li><a class="menu__item header__menu-item" href="#">Investors & Media</a><i class="fa fa-caret-down"></i>
           <ul class="nav-list dropdown">
-            <li><a class="dropdown__menu-item" href="#">Overview</a></li>
-            <li><a class="dropdown__menu-item" href="#">Stock Information</a></li>
-            <li><a class="dropdown__menu-item" href="#">Analyst Coverage</a></li>
-            <li><a class="dropdown__menu-item" href="#">SEC Filings</a></li>
-            <li><a class="dropdown__menu-item" href="#">Press Releases</a></li>
-            <li><a class="dropdown__menu-item" href="#">Events & Presentations</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Overview</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Stock Information</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Analyst Coverage</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">SEC Filings</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Press Releases</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Events & Presentations</a></li>
           </ul>
         </li>
-        <li><a class="header__menu-item" href="#">Careers</a>
+        <li><a class="menu__item header__menu-item" href="#">Careers</a><i class="fa fa-caret-down"></i>
           <ul class="nav-list dropdown">
-            <li><a class="dropdown__menu-item" href="#">Culture</a></li>
-            <li><a class="dropdown__menu-item" href="#">Benefits</a></li>
-            <li><a class="dropdown__menu-item" href="#">Open Positions</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Culture</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Benefits</a></li>
+            <li><a class="menu__item dropdown__menu-item" href="#">Open Positions</a></li>
           </ul>
         </li>
-        <li><a class="header__menu-item" href="#">Contact</a></li>
+        <li><a class="menu__item header__menu-item" href="#">Contact</a></li>
+        <li><a class="menu__item header__menu-item" href="#">&#128269;</a></li>
       </ul>
       <!-- <div>
         <a href="#"></a>
@@ -78,9 +77,8 @@
             required
           />
         </form>
-      </div> -->
-    </nav>
-
+      </div>
+    </nav> -->
   </header>
   <main>
     <section class="banner">
@@ -96,11 +94,11 @@
     <section class="about">
       <div class="about__info">
         <h2 class="section__title"><a class="section__link" href="#">Technology</a></h2>
-        <p class="section__description">Mersana has developed highly differentiated and innovative antibody-drug conjugate (ADC) platforms, with both cytotoxic and immunostimulatory payloads, that allow for customization and optimization of ADCs for a given target and indication.  As a result, we are designing ADCs to overcome the limitations of first-generation platforms by delivering therapeutics with greater efficacy and tolerability to address the unmet medical needs of people living with cancer. </p>
+        <p class="about__description">Mersana has developed highly differentiated and innovative antibody-drug conjugate (ADC) platforms, with both cytotoxic and immunostimulatory payloads, that allow for customization and optimization of ADCs for a given target and indication.  As a result, we are designing ADCs to overcome the limitations of first-generation platforms by delivering therapeutics with greater efficacy and tolerability to address the unmet medical needs of people living with cancer. </p>
       </div>
       <div class="about__info">
-        <h2 class="about__title"><a class="section__link" href="#">Pipeline</a></h2>
-        <p class="section__description">We are leveraging our proprietary technology platforms to build a robust pipeline of ADCs with the potential to meaningfully improve the lives of people living with cancer. We are pursuing a multiprong strategy for treating cancer with both cytotoxic and immunostimulatory ADCs.</p>
+        <h2 class="section__title"><a class="section__link" href="#">Pipeline</a></h2>
+        <p class="about__description">We are leveraging our proprietary technology platforms to build a robust pipeline of ADCs with the potential to meaningfully improve the lives of people living with cancer. We are pursuing a multiprong strategy for treating cancer with both cytotoxic and immunostimulatory ADCs.</p>
       </div>
     </section>
     <section class="media">
@@ -108,22 +106,26 @@
         <h2 class="section__title"><a class="section__link" href="#">News</a></h2>
         <div class="media__news-item">
           <h3 class="media__date">December 2, 2021</h3>
-          <p class="section__description">Mersana Therapeutics Named to 2021 List of Top Places to Work in Massachusetts by The Boston Globe</p>
+          <p class="media__description">Mersana Therapeutics Named to 2021 List of Top Places to Work in Massachusetts by The Boston Globe</p>
+          <img class="media__arrow" src="./images/mersana-swoop-arrow.png" alt="arrow"/>
         </div>
         <div class="media__news-item">
           <h3 class="media__date">November 23, 2021</h3>
-          <p class="section__description">Mersana Therapeutics to Participate in the Upcoming 4th Annual Evercore ISI HealthCONx Conference</p>
+          <p class="media__description">Mersana Therapeutics to Participate in the Upcoming 4th Annual Evercore ISI HealthCONx Conference</p>
+          <img class="media__arrow" src="./images/mersana-swoop-arrow.png" alt="arrow"/>
         </div>
       </div>
       <div class="media__info">
         <h2 class="section__title"><a class="section__link" href="#">Events & Presentations</a></h2>
         <div class="media__news-item">
           <h3 class="media__date">December 1, 2021</h3>
-          <p class="section__description">4th Annual Evercore ISI HealthCONx Conference</p>
+          <p class="media__description">4th Annual Evercore ISI HealthCONx Conference</p>
+          <img class="media__arrow" src="./images/mersana-swoop-arrow.png" alt="arrow"/>
         </div>
         <div class="media__news-item">
           <h3 class="media__date">November 17, 2021</h3>
-          <p class="section__description">Stifel 2021 Virtual Healthcare Conference</p>
+          <p class="media__description">Stifel 2021 Virtual Healthcare Conference</p>
+          <img class="media__arrow" src="./images/mersana-swoop-arrow.png" alt="arrow"/>
         </div>
       </div>
     </section>
