--- a/week-2/day3/index.html
+++ b/week-2/day3/index.html
@@ -60,7 +60,7 @@
           </ul>
         </li>
         <li><a class="menu__item header__menu-item" href="#">Contact</a></li>
-        <li><a class="menu__item header__menu-item" href="#">&#128269;</a></li>
+        <li><a class="menu__item header__menu-item" href="#"><i class="fa fa-search"></i></a></li>
       </ul>
       <!-- <div>
         <a href="#"></a>
